--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• We added haptic feedback and a subtle vibration when you change between different views during a group call, but it’s still up to you whether or not you shake it up and switch from the grid view back to the slideshow that your coworker is presenting.
+• Přidali jsme haptickou odezvu a indikátor vibrací při přepínání různých zobrazení během skupinového hovoru.
