--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• We added haptic feedback and a subtle vibration when you change between different views during a group call, but it’s still up to you whether or not you shake it up and switch from the grid view back to the slideshow that your coworker is presenting.
+• Abbiamo aggiunto il feedback aptico e una leggera vibrazione quando cambi modalità di visualizzazione durante una chiamata di gruppo. E tu come preferisci vedere la schermata durante una chiamata? Noi siamo fan della griglia!
