--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• We added haptic feedback and a subtle vibration when you change between different views during a group call, but it’s still up to you whether or not you shake it up and switch from the grid view back to the slideshow that your coworker is presenting.
+• Od teraz podczas przełączania się między różnymi trybami widoku w czasie połączeń grupowych pojawi się sygnał dotykowy w postaci delikatnych wibracji. Czy sprawi to, że chętniej wrócisz z widoku siatki do prezentacji koleżanki z pracy? To już zależy od Ciebie.
