--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• We added haptic feedback and a subtle vibration when you change between different views during a group call, but it’s still up to you whether or not you shake it up and switch from the grid view back to the slideshow that your coworker is presenting.
+• Adicionamos feedback háptico e uma leve vibração ao alternar entre diferentes visualizações durante uma chamada em grupo. No entanto, a decisão de voltar da visualização em grade para a apresentação de slides que seu colega está exibindo ainda é sua.
