--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• We added haptic feedback and a subtle vibration when you change between different views during a group call, but it’s still up to you whether or not you shake it up and switch from the grid view back to the slideshow that your coworker is presenting.
+• Am adăugat feedback haptic și o vibrație subtilă atunci când treci de la o vizualizare la alta în timpul unui apel în grup. Rămâne, însă, la latitudinea ta dacă te agiți sau nu și treci de la vizualizarea grilă înapoi la prezentarea de diapozitive pe care o prezintă colegul tău.
